fix(front): #1535 manage overflowed content
- manage overflowed content on data_table_next

--- a/front/src/components/DataTableNext/index.css
+++ b/front/src/components/DataTableNext/index.css
@@ -1,3 +1,9 @@
+:local .tableHeader > th, .tableBody > td {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
 :local .tableHeader {
   background-color: #898787;
   border: none;
@@ -14,7 +20,7 @@
   cursor: pointer;
 }
 
-:local .tableBody > td{
+:local .tableBody > td {
   vertical-align: middle;
 }
 
